--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="CREATE_TABLE_LOCATION">CREATE TABLE Location(id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL, latitude REAL NOT NULL, longitude REAL NOT NULL, geofenced INTEGER DEFAULT 0);</string>
-    <string name="CREATE_TABLE_ITEM">CREATE TABLE List(id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL, quantity INTEGER NOT NULL, bought INTEGER DEFAULT 0);</string>
+    <string name="CREATE_TABLE_LIST">CREATE TABLE List(id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL, quantity INTEGER NOT NULL, bought INTEGER DEFAULT 0);</string>
+    <string name="CREATE_TABLE_ITEM">CREATE TABLE Item(id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL);</string>
     <string name="geofence_transition_invalid_type">Invalid Geofence transition type</string>
     <string name="channel_name">Geofence Notification</string>
     <string name="channel_description">Display notifications for geofenced locations</string>
+    <string name="ITEM_TABLE">Item</string>
 </resources>
