Updated some of the UI strings in menu's to better reflect what they do. Resized some UI elements to make them more readable. Updated the List table to use item id's instead of names. This is mostly for easily linking tables on the SQL side with joins. Also will come in handy when I implement multiple shopping lists. Updated the Add item activity so that user can add an item to the list if it doesn't exist. Split Item into Item and itemlist with itemlist inheriting Item. It made more sense to have items not using bought and quantity variables, instead itemList is used for when an item is added to the shopping list. Updated the searching on the add item activity to allow multiple items to be searched. Fixed a bug where multiple of the same location could be saved. Fixed a bug where when saving the same item to the shopping list it wouldnt add the quantities together.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,19 +2,19 @@
     <string name="app_name">GeoShoppingFinal</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">GeoShopping</string>
+    <string name="nav_header_subtitle"></string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
+    <string name="menu_home">Shopping List</string>
+    <string name="menu_gallery">Add Shop</string>
+    <string name="menu_slideshow">Shop List</string>
+    <string name="menu_tools">Help</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
     <string name="CREATE_TABLE_LOCATION">CREATE TABLE Location(id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL, latitude REAL NOT NULL, longitude REAL NOT NULL, geofenced INTEGER DEFAULT 0);</string>
-    <string name="CREATE_TABLE_LIST">CREATE TABLE List(id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL, quantity INTEGER NOT NULL, bought INTEGER DEFAULT 0);</string>
+    <string name="CREATE_TABLE_LIST">CREATE TABLE List(id INTEGER PRIMARY KEY AUTOINCREMENT, itemID INTEGER NOT NULL, quantity INTEGER NOT NULL, bought INTEGER DEFAULT 0);</string>
     <string name="CREATE_TABLE_ITEM">CREATE TABLE Item(id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL);</string>
     <string name="geofence_transition_invalid_type">Invalid Geofence transition type</string>
     <string name="channel_name">Geofence Notification</string>
