--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,10 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">GeoShopping</string>
-    <string name="nav_header_subtitle"></string>
+    <string name="nav_header_subtitle">Happy Shopping!</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_asc">Ascending</string>
+    <string name="action_desc">Descending</string>
 
     <string name="menu_home">Shopping List</string>
     <string name="menu_gallery">Add Shop</string>
