Removed some toasts. There was an unnecessary amount of confirmation toasts that were cluttering up the UI, i removed a lot of the added x toasts. Added a check to prevent any of the location/geofences parts to crash or not work such as the place picker or geofences when location services are disabled. Updated the icons in the drawer to better reflect their buttons.  Updated the notification to have its own icon. Fixed an issue where the list name was not showing when opening the notification. Updated the styles of the empty list text as they were too large and felt like they were shouting at the user. Added a check for duplicates for shopping lists and items so that the same item/list cant be added more than once.

--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -13,5 +13,5 @@
     <string name="SHOP_LIST_TABLE">Shopping</string>
     <string name="ANDROID_API_KEY">AIzaSyAaOSozlNmzZcjQ_8rgnSiZ1CX92wuskus</string>
     <string name="MAPS_API_KEY">AIzaSyDaDQRoc087nDE5_vfvwOGyYGCNRhNH4s4</string>
-    <string name="empty_list">Nothing here!\nClick the plus button at the bottom to add</string>
+    <string name="empty_list">Oops... nothing here.\nClick the plus button at the bottom to add</string>
 </resources>
