--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GeoShoppingFinal</string>
+    <string name="app_name">GeoShopping</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">GeoShopping</string>
@@ -15,9 +15,10 @@
     <string name="menu_share">Share</string>
     <string name="menu_send">Shopping List</string>
     <string name="CREATE_TABLE_LOCATION">CREATE TABLE Location(id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL, latitude REAL NOT NULL, longitude REAL NOT NULL, geofenced INTEGER DEFAULT 0, shopID INTEGER NULL);</string>
-    <string name="CREATE_TABLE_LIST">CREATE TABLE List(id INTEGER PRIMARY KEY AUTOINCREMENT, itemID INTEGER NOT NULL, quantity INTEGER NOT NULL, bought INTEGER DEFAULT 0, shopID INTEGER NOT NULL);</string>
+    <string name="CREATE_TABLE_LIST">CREATE TABLE List(id INTEGER PRIMARY KEY AUTOINCREMENT, itemID INTEGER NOT NULL, quantity INTEGER NOT NULL, bought INTEGER DEFAULT 0, shopID INTEGER NOT NULL, deleted INTEGER DEFAULT 0);</string>
     <string name="CREATE_TABLE_ITEM">CREATE TABLE Item(id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL);</string>
     <string name="CREATE_TABLE_SHOPPING_LIST">CREATE TABLE Shopping(id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL, lastLocation INTEGER NULL);</string>
+    <string name="CREATE_TABLE_HISTORY">CREATE TABLE History(id INTEGER PRIMARY KEY AUTOINCREMENT, itemID INTEGER, locationID INTEGER, count INTEGER, date TEXT);</string>
     <string name="geofence_transition_invalid_type">Invalid Geofence transition type</string>
     <string name="channel_name">Geofence Notification</string>
     <string name="channel_description">Display notifications for geofenced locations</string>
@@ -27,5 +28,6 @@
     <string name="SHOP_LIST_TABLE">Shopping</string>
     <string name="ANDROID_API_KEY">AIzaSyAaOSozlNmzZcjQ_8rgnSiZ1CX92wuskus</string>
     <string name="MAPS_API_KEY">AIzaSyDaDQRoc087nDE5_vfvwOGyYGCNRhNH4s4</string>
+    <string name="HISTORY_TABLE">History</string>
     <string name="empty_list">Nothing here!\nClick the plus button at the bottom to add</string>
 </resources>
