Updated the app font. I felt like the old font was too bland and generic, so I searched for fonts and decided on metropolis. Added the ability to edit item quantity in shopping list. Added a WIP help screen that shows on first start up and is accessible through the drawer. This help will show a basic how to use the app. I felt that it would be great to show the user how to quickly and efficiently use the app correctly. Updated the color of the heading for the add item activity to match the other headings as it was out of place. Updated the empty list messages to be unique to each list instead of being generic. This makes it easier to understand which list is empty. Updated all the click here to tap here as this is an app not a computer program. Updated various headings to better represent their section. Updated the linked shop list icons and text to be white to be easier to read on the green background. Changed the delete icon to be just an outline instead of filled in. The icon was too intense compared to the rest of the list items. Fixed an issue where the autocap in the adding item would duplicate the text. Updated the notification text to better convey that you have a notification.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="action_asc">Ascending</string>
     <string name="action_desc">Descending</string>
 
-    <string name="menu_home">Shopping Lists</string>
+    <string name="menu_home">My Shopping Lists</string>
     <string name="menu_gallery">Add Shop</string>
     <string name="menu_slideshow">Shop List</string>
     <string name="menu_tools">Help</string>
@@ -29,5 +29,8 @@
     <string name="ANDROID_API_KEY">AIzaSyAaOSozlNmzZcjQ_8rgnSiZ1CX92wuskus</string>
     <string name="MAPS_API_KEY">AIzaSyDaDQRoc087nDE5_vfvwOGyYGCNRhNH4s4</string>
     <string name="HISTORY_TABLE">History</string>
-    <string name="empty_list">Nothing here!\nClick the plus button at the bottom to add</string>
+    <string name="empty_list_home">Oops nothing here.\nTap the plus button at the bottom to start.</string>
+    <string name="empty_list_list">Empty shopping list.\nTap the plus button at the bottom to add an item.</string>
+    <string name="empty_list_item">No items.\nTap the plus button at the bottom to add an item.</string>
+    <string name="empty_list_location">No locations.\nTap the plus button at the bottom to add a location.</string>
 </resources>
