--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,9 @@
 
     <string name="menu_home">My Shopping Lists</string>
     <string name="menu_gallery">Add Shop</string>
-    <string name="menu_slideshow">Shop List</string>
+    <string name="menu_slideshow">Shop Locations</string>
     <string name="menu_tools">Help</string>
-    <string name="menu_share">Share</string>
+    <string name="menu_share">Add Item</string>
     <string name="menu_send">Shopping List</string>
     <string name="CREATE_TABLE_LOCATION">CREATE TABLE Location(id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL, latitude REAL NOT NULL, longitude REAL NOT NULL, geofenced INTEGER DEFAULT 0, shopID INTEGER NULL);</string>
     <string name="CREATE_TABLE_LIST">CREATE TABLE List(id INTEGER PRIMARY KEY AUTOINCREMENT, itemID INTEGER NOT NULL, quantity INTEGER NOT NULL, bought INTEGER DEFAULT 0, shopID INTEGER NOT NULL, deleted INTEGER DEFAULT 0);</string>
@@ -32,5 +32,5 @@
     <string name="empty_list_home">Oops nothing here.\nTap the plus button at the bottom to start.</string>
     <string name="empty_list_list">Empty shopping list.\nTap the plus button at the bottom to add an item.</string>
     <string name="empty_list_item">No items.\nTap the plus button at the bottom to add an item.</string>
-    <string name="empty_list_location">No locations.\nTap the plus button at the bottom to add a location.</string>
+    <string name="empty_list_location">No locations.\nTap the plus button at the bottom to add a shop location.</string>
 </resources>
